backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: expense-app
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend-expense
        image: 192.168.56.106:5000/backend:01
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: expense-app
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
