backendPod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: expense-app
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend-expense
        image: backend:v1
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  # type: NodePort
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
