dbPod.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  namespace: expense-app
  labels:
    app: db
spec:
  replicas: 1
  selectors:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db-expense
        image: mysql:8.0
        volumeMounts:
        - name: expenseVolume
          mountPath: /var/lib/mysql
        - name: schema-volume
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: schema-volume
        configMap:
          name: mysql-schema
      - name: expenseVolume
        persistentVolumeClaim:
          claimName: expense-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  # type: ClusterIP
  ClusterIP: None
  selector:
    app: db
  ports:
    - port: 3306
      targetPort: 3306
