frontendIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: expense-app

spec:
  ingressClassName: nginx

  rules:
  - host: expense-app.local
    http:
      paths:

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
