ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expense-ingress
  namespace: expense-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: expense-app.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 80
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: backend-service
              prot:
                number: 8080
